<resources>
    <string name="app_name">Battleships</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="main_menu">Main menu</string>
    <string name="options_menu">Options</string>
    <string name="game_mode">Start Game</string>
    <string name="lobby">Lobby</string>
    <string name="title_activity_game_mode_list">GameModeActivity</string>
    <string name="title_activity_game_map_selection_list">GameMapSelectionActivity</string>
    <string name="title_activity_game_view">GameViewActivity</string>
    <string name="title_activity_intermediate">IntermediateActivity</string>
    <string name="game_instruct">Next player\'s turn</string>
    <string name="title_activity_ship_selection">ShipSelectionActivity</string>
    <string name="name">ListViewBaseAdapter</string>
    <string name="image">Thumbnail</string>
    <string-array name="orientations">
        <item>UP</item>
        <item>DOWN</item>
        <item>LEFT</item>
        <item>RIGHT</item>
    </string-array>

    <string-array name="list_game">
        <item>Standard_Classic mode</item>
        <item>Oneshot_One shot destroys a ship</item>
        <item>Advanced_Several firing types</item>

    </string-array>

    <string name="title_firePower_text_view">Choose your weapon</string>

    <string name="normal_firepower_button">Normal</string>

    <string name="play_again_button">Play again</string>

    <string name="Cluster_bomb_firepower_button">Cluster bomb</string>

    <string name="air_strike_firepower_button">Air strike</string>

    <string name="normal_firepower_text_view">Standard attack, click and fire at one tile</string>

    <string name="cluster_bomb_text_view">Fire at one tile, and each tile connected to that tile will also be damaged</string>

    <string name="air_strike_text_view">Fire a straight horizontal line, across the map</string>

    <string name="back_button">Back</string>

    <string name="normal_game_mode_button">Normal</string>

    <string name="advanced_game_mode_button">Advanced</string>

    <string name="advanced_setup_text_view">Setup</string>

    <string name="normal_text_view">Normal</string>

    <string name="cluster_bomb_firepower_text_view">Cluster bomb</string>

    <string name="air_strike_firepower_text_view">Air strike</string>

    <string name="start_game_button">Start Game</string>


</resources>


