<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/game_mode"
        android:id="@+id/textView4"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="39dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back_button"
        android:id="@+id/backButton"
        android:layout_gravity="center_horizontal"
        android:onClick="goToMainMenu"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="27dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/normal_game_mode_button"
        android:id="@+id/normalGameButton"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:onClick="startNormalGame"/>/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/advanced_game_mode_button"
        android:id="@+id/advancedGameButton"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:onClick="startAdvancedGame"/>/>
</RelativeLayout>